--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
             	<h2 class="ftco-heading-2">Physical Address</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">River Road, keekorok lane - Nairobi, Kenya</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+254 722 260358</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><small>info@protocalpromotion.com</small></span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -410,8 +410,8 @@
               <div class="opening-hours">
               	<h4>Opening Days:</h4>
               	<p class="pl-3">
-              		<span>Monday – Friday : 9am to 20 pm</span>
-              		<span>Saturday : 9am to 17 pm</span>
+              		<span>Mon – Fri : 8 am to 6 pm</span>
+              		<span>Saturday : 8am to 1 pm</span>
               	</p>
               	<h4>Vacations:</h4>
               	<p class="pl-3">
@@ -426,7 +426,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed By  <a href="https://dataconsultancy.co.ke" target="_blank">Click Here</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
